// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EU - Button CTA renders correctly 1`] = `
"<button class=\\"ecl-button ecl-button--call\\" type=\\"button\\">
  <span class=\\"ecl-button__container\\">
    <span class=\\"ecl-button__label\\">Call to action button</span>

    <svg
      class=\\"ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-button__icon ecl-button__icon--after\\"
      focusable=\\"false\\"
      aria-hidden=\\"true\\"
    >
      <use xlink:href=\\"static/icons.svg#ui--corner-arrow\\"></use>
    </svg>
  </span>
</button>
"
`;

exports[`EU - Button Ghost renders correctly 1`] = `
"<button class=\\"ecl-button ecl-button--ghost\\" type=\\"button\\">
  <span class=\\"ecl-button__container\\">
    <span class=\\"ecl-button__label\\">Ghost button</span>
  </span>
</button>
"
`;

exports[`EU - Button Primary renders correctly 1`] = `
"<button class=\\"ecl-button ecl-button--primary\\" type=\\"button\\">
  <span class=\\"ecl-button__container\\">
    <span class=\\"ecl-button__label\\">Primary button</span>
  </span>
</button>
"
`;

exports[`EU - Button Search renders correctly 1`] = `
"<button class=\\"ecl-button ecl-button--search\\" type=\\"button\\">
  <span class=\\"ecl-button__container\\">
    <span class=\\"ecl-button__label\\">Search button</span>
  </span>
</button>
"
`;

exports[`EU - Button Secondary renders correctly 1`] = `
"<button class=\\"ecl-button ecl-button--secondary\\" type=\\"button\\">
  <span class=\\"ecl-button__container\\">
    <span class=\\"ecl-button__label\\">Secondary button</span>
  </span>
</button>
"
`;
